Expense Tracking finished, some styling changes

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,4 @@
 - Filters for photo gallery (my photos, photos from last month/year)
+- Style header 
+- Page transitions
+- Fancy filtering animations
