initial todo-list stuff

--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@
 - Fancy filtering animations
 - Wrap expense card in a container so we can separate the firebase logic state from the filter. (pass the filter options into the
   inner component so that when we add/delete it doesn't reset filter state)
+- should show picture description and have delete button for your own pictures
